<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.bear.customerview.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_space"
        android:layout_marginRight="@dimen/margin_space">
        <com.trade.widget.ArrowRowView
            android:id="@+id/user_open_account_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_row_height"
            app:titleText="@string/my_fast_open"
            app:arrowSrc="@drawable/ic_open_fast"
            app:titleTextColor="@color/normal_text_color"
            app:titleTextSize="14px"/>
        <com.trade.widget.ArrowRowView
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_row_height"
            app:titleText="@string/my_easy_time"
            app:arrowSrc="@drawable/ic_open_fast"
            android:layout_marginTop="@dimen/height_dp_10"
            android:visibility="gone"
            app:titleTextColor="@color/normal_text_color"
            app:titleTextSize="14px"/>
        <com.trade.widget.ArrowRowView
            android:id="@+id/user_share_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_row_height"
            app:titleText="@string/my_share_text"
            app:arrowSrc="@drawable/ic_my_share"
            app:titleTextColor="@color/normal_text_color"
            app:titleTextSize="14px"/>
        <com.trade.widget.ArrowRowView
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_row_height"
            app:titleText="@string/my_suggest"
            app:arrowSrc="@drawable/ic_open_fast"
            app:titleTextColor="@color/normal_text_color"
            app:titleTextSize="14px"/>
        <com.trade.widget.ArrowRowView
            android:id="@+id/user_about_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_row_height"
            app:titleText="@string/my_about_text"
            app:arrowSrc="@drawable/ic_about_app"
            app:titleTextColor="@color/normal_text_color"
            app:titleTextSize="14px"/>
    </com.bear.customerview.autolayout.AutoLinearLayout>
</ScrollView>