<?xml version="1.0" encoding="utf-8"?>
<com.bear.customerview.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <com.bear.customerview.autolayout.AutoLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/normal_top_margin"
                android:background="@color/white_color">
            <com.bear.customerview.autolayout.AutoLinearLayout
                android:layout_width="match_parent"
                android:layout_height="130px"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/normal_left_margin"
                android:paddingRight="@dimen/normal_left_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_phone_text"
                    android:textColor="@color/normal_text_color"
                    android:textSize="@dimen/normal_big_text_size"/>
                <EditText
                    android:id="@+id/register_phone_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="60px"
                    android:background="@null"
                    android:hint="@string/login_acount_notify_text"
                    android:textColorHint="@color/edit_hint_text_color"
                    android:textColor="@color/normal_text_color"
                    android:textSize="@dimen/normal_small_text_size"
                    android:inputType="phone"
                    android:maxLength="11"/>
            </com.bear.customerview.autolayout.AutoLinearLayout>
            <View
                style="@style/line_style"/>
            <com.bear.customerview.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130px"
                android:paddingLeft="@dimen/normal_left_margin"
                android:paddingRight="@dimen/normal_left_margin">
                <TextView
                    android:id="@+id/verification_code_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verification_code_text"
                    android:textColor="@color/normal_text_color"
                    android:textSize="@dimen/normal_big_text_size"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:id="@+id/register_vefiricode_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="60px"
                    android:background="@null"
                    android:hint="@string/verification_hint_code_text"
                    android:textColorHint="@color/edit_hint_text_color"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/verification_code_text"
                    android:textColor="@color/normal_text_color"
                    android:textSize="@dimen/normal_small_text_size"
                    android:maxLength="6"
                    android:inputType="phone"/>
                <com.bear.customerview.carouseview.CarouseButton
                    android:id="@+id/get_verification_code_btn"
                    android:layout_width="210px"
                    android:layout_height="60px"
                    app:normalSolid="@color/colorAccent"
                    app:pressedSolid="@color/colorPrimaryDark"
                    app:roundButtonRadius = "@dimen/login_btn_radius"
                    android:text="@string/register_verification_code_text"
                    android:textSize="30px"
                    android:onClick="registerButtonEvent"
                    android:textColor="@color/white_color"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@color/white_color"/>
            </com.bear.customerview.autolayout.AutoRelativeLayout>
        </com.bear.customerview.autolayout.AutoLinearLayout>
    <com.bear.customerview.autolayout.AutoLinearLayout
        android:id="@+id/user_protocol_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/app_marign_space">
        <TextView
            style="@style/normal_text_style"
            android:text="@string/register_notify_text"
            android:layout_marginTop="60px"/>
        <TextView
            android:id="@+id/user_protocol_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_user_protocol"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="60px"/>
    </com.bear.customerview.autolayout.AutoLinearLayout>
    <com.bear.customerview.carouseview.CarouseButton
        android:id="@+id/verification_login_btn"
        android:layout_width="match_parent"
        android:layout_height="120px"
        app:normalSolid="@color/colorAccent"
        app:pressedSolid="@color/colorPrimaryDark"
        app:roundButtonRadius = "@dimen/login_btn_radius"
        android:text="@string/register_verify_text"
        android:onClick="registerButtonEvent"
        android:layout_marginTop="100px"
        android:textColor="@color/white_color"
        android:layout_marginLeft="@dimen/app_marign_space"
        android:layout_marginRight="@dimen/app_marign_space"/>
</com.bear.customerview.autolayout.AutoLinearLayout>