<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_title_height"
        android:paddingLeft="@dimen/app_marign_space"
        android:paddingRight="@dimen/app_marign_space"
        android:background="@color/colorAccent">
        <TextView
            style="@style/title_bar_text_style"
            android:text="@string/create_new_plane_text"
            android:layout_centerInParent="true" />
        <Button
            android:id="@+id/publish_plan_btn"
            style="@style/title_bar_text_style"
            android:text="@string/publish_plane_text"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@null"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/add_plan_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plane_name_text"
            android:textColor="@color/normal_back_text_color"/>
        <com.trade.widget.ArrowRowView
            android:id="@+id/currency_view"
            android:layout_width="match_parent"
            android:layout_height="100px"
            app:titleText="eurusd"
            android:background="@color/button_bg_gray"></com.trade.widget.ArrowRowView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="开仓价:"
                android:textColor="@color/normal_back_text_color" />
            <EditText
                android:id="@+id/plan_open_price_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="目标价:"
                android:textColor="@color/normal_back_text_color"/>
            <EditText
                android:id="@+id/plan_target_price_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="止损价:"
                android:textColor="@color/normal_back_text_color"/>
            <EditText
                android:id="@+id/plan_stop_price_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>
        <com.czm.xcricheditor.XCRichEditor
            android:id="@+id/plan_content_text"
            android:layout_width="match_parent"
            android:layout_height="500px"
            android:hint="@string/plane_content_text"
            android:textColor="@color/back_color"
            android:gravity="left|top"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/select_pic_btn"
            android:layout_width="100px"
            android:layout_height="100px"
            android:scaleType="fitXY"
            android:src="@drawable/app_splash"/>
        <RadioGroup
            android:id="@+id/plan_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true">
            <RadioButton
                android:id="@+id/plan_publish_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_text"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/plan_attention_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attention_visible_text"/>
            <RadioButton
                android:id="@+id/plan_self_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/self_visible_text"/>
        </RadioGroup>
    </RelativeLayout>
</LinearLayout>