<?xml version="1.0" encoding="utf-8"?>
<com.bear.customerview.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.bear.customerview.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.bear.customerview.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white_color"
            android:layout_marginTop="30px">

            <com.bear.customerview.autolayout.AutoLinearLayout
                android:layout_width="match_parent"
                android:layout_height="130px"
                android:layout_marginLeft="40px"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_password_text"
                    android:textColor="@color/normal_text_color"
                    android:textSize="48px" />
                <EditText
                    android:id="@+id/forget_password_text_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="108px"
                    android:background="@null"
                    android:hint="@string/register_input_password"
                    android:maxLength="16"
                    android:textColor="@color/normal_text_color"
                    android:textColorHint="@color/edit_hint_text_color"
                    android:inputType="textPassword"/>
            </com.bear.customerview.autolayout.AutoLinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/app_backgroud_color"/>
            <com.bear.customerview.autolayout.AutoLinearLayout
                android:layout_width="match_parent"
                android:layout_height="130px"
                android:orientation="horizontal"
                android:layout_marginLeft="40px">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/normal_text_color"
                    android:text="@string/sure_password_text"
                    android:textSize="48px"/>
                <EditText
                    android:id="@+id/forget_password_text_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/register_input_password_again"
                    android:textColorHint="@color/edit_hint_text_color"
                    android:layout_marginLeft="60px"
                    android:maxLength="16"
                    android:background="@null"
                    android:textColor="@color/normal_text_color"
                    android:inputType="textPassword"/>
            </com.bear.customerview.autolayout.AutoLinearLayout>
        </com.bear.customerview.autolayout.AutoLinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/noraml_gray_color"
            android:textSize="@dimen/normal_small_text_size"
            android:text="@string/register_password_notify_text"
            android:layout_marginTop="60px"
            android:layout_marginLeft="40px"/>
        <com.bear.customerview.carouseview.CarouseButton
            android:id="@+id/verify_password_btn"
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:text="@string/register_immediately_text"
            android:textColor="@color/white_color"
            app:normalSolid="@color/colorAccent"
            app:pressedSolid="@color/colorPrimaryDark"
            app:roundButtonRadius = "@dimen/login_btn_radius"
            android:textSize="48px"
            android:layout_marginTop="100px"
            android:paddingLeft="@dimen/app_marign_space"
            android:paddingRight="@dimen/app_marign_space"/>
    </com.bear.customerview.autolayout.AutoLinearLayout>
</com.bear.customerview.autolayout.AutoLinearLayout>