<?xml version="1.0" encoding="utf-8"?>
<com.bear.customerview.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/layout_user_head"/>
    <com.bear.customerview.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="200px"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/white_color"
            android:layout_marginTop="@dimen/app_marign_space"
            android:layout_marginLeft="@dimen/margin_space"
            android:layout_marginRight="@dimen/margin_space">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/my_plan_text"
                android:drawableTop="@drawable/ic_my_plan"
                android:drawablePadding="@dimen/height_dp_5"
                android:layout_weight="1"
                android:textColor="@color/back_color"
                android:textSize="@dimen/normal_small_text_size"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/my_favorite_text"
                android:drawableTop="@drawable/ic_my_favorite"
                android:drawablePadding="@dimen/height_dp_5"
                android:layout_weight="1"
                android:textColor="@color/back_color"
                android:textSize="@dimen/normal_small_text_size"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/my_message_text"
                android:drawableTop="@drawable/ic_my_message"
                android:drawablePadding="@dimen/height_dp_5"
                android:layout_weight="1"
                android:textSize="@dimen/normal_small_text_size"/>
        </com.bear.customerview.autolayout.AutoLinearLayout>
    <include
        layout="@layout/my_features_list_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height_dp_10"/>
</com.bear.customerview.autolayout.AutoLinearLayout>